err/soaplib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/soaplib'...
Listing './lib/python3.5/site-packages/soaplib/serializers'...
Compiling './lib/python3.5/site-packages/soaplib/serializers/clazz.py'...
***   File "./lib/python3.5/site-packages/soaplib/serializers/clazz.py", line 62
    print extends
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/soaplib/serializers/primitive.py'...
***   File "./lib/python3.5/site-packages/soaplib/serializers/primitive.py", line 233
    tz_hr, tz_min = [int(match.group(x)) for x in "tz_hr", "tz_min"]
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/soaplib/service.py'...
***   File "./lib/python3.5/site-packages/soaplib/service.py", line 64
    except IndexError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/soaplib/soap.py'...
***   File "./lib/python3.5/site-packages/soaplib/soap.py", line 81
    except ValueError,e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/soaplib/test'...
Listing './lib/python3.5/site-packages/soaplib/test/interop'...
Listing './lib/python3.5/site-packages/soaplib/test/interop/server'...
Compiling './lib/python3.5/site-packages/soaplib/test/interop/server/_service.py'...
***   File "./lib/python3.5/site-packages/soaplib/test/interop/server/_service.py", line 108
    self.soap_out_header.dt = datetime(year=2000, month=01, day=01)
                                                         ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/soaplib/test/interop/server/basic.py'...
***   File "./lib/python3.5/site-packages/soaplib/test/interop/server/basic.py", line 37
    print "Error: example server code requires Python >= 2.5"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/soaplib/test/interop/test_suds.py'...
***   File "./lib/python3.5/site-packages/soaplib/test/interop/test_suds.py", line 53
    except WebFault, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/soaplib/test/interop/test_wsi.py'...
***   File "./lib/python3.5/site-packages/soaplib/test/interop/test_wsi.py", line 78
    print "Creating config for wsdl at %s ...\n" %wsdl_uri
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/soaplib/test/serializers'...
Compiling './lib/python3.5/site-packages/soaplib/test/serializers/test_enum.py'...
***   File "./lib/python3.5/site-packages/soaplib/test/serializers/test_enum.py", line 63
    print etree.tostring(elt, pretty_print=True)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/soaplib/test/test_service.py'...
***   File "./lib/python3.5/site-packages/soaplib/test/test_service.py", line 154
    print etree.tostring(sent_xml, pretty_print=True)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/soaplib/util'...
Compiling './lib/python3.5/site-packages/soaplib/wsgi.py'...
***   File "./lib/python3.5/site-packages/soaplib/wsgi.py", line 344
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/soaplib-1.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
